[package]
name = "nyar_python"
version = "0.0.1"
authors = ["192608617@qq.com"]
edition = "2018"
description = "..."
license = "MPL-2.0"

[lib]
name = "string_sum"
crate-type = ["cdylib"]

[dependencies]
nyar_valkyrie = "0.0.1"
pyo3 = {version = "0.9.0-alpha.1",features = ["extension-module"]}

[dev-dependencies]


[build-dependencies]
